--- a/css/services.css
+++ b/css/services.css
@@ -33,3 +33,30 @@
 .search-input {
     border: none;
 }
+
+.carousel-item {
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    transition: opacity 1s ease-in-out; /*Transition en douceur*/
+    opacity: 0;/*Initialement invisible*/
+}
+.carousel-caption {
+    top: 50%;
+    transform: translateY(-50%);
+    bottom: initial;
+}
+
+.carousel-item.active{
+    opacity: 1;/*visible quand active*/
+}
+
+.fixed-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    text-align: center;
+    color: white;
+}
