--- a/css/services.css
+++ b/css/services.css
@@ -44,6 +44,11 @@ body {
     background-position: center;
     transition: opacity 1s ease-in-out; /*Transition en douceur*/
     opacity: 0;/*Initialement invisible*/
+   
+}
+
+.carousel-inner{
+    animation: slide 5ms infinite 3ms alternate;
 }
 .carousel-caption {
     top: 50%;
@@ -63,6 +68,48 @@ body {
     z-index: 10;
     text-align: center;
     color: white;
+}
+
+
+/* Nos Étapes de Travail */
+.steps {
+    text-align: center;
+}
+
+.circle {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    margin: auto;
+}
+
+.circle-1 { 
+    width: 50px;
+    height: 50px;
+    background-color: #5DC162; 
+}
+.circle-2 { 
+    width: 65px;
+    height: 65px;
+    background-color: #7AE37F; }
+.circle-3 { 
+    width: 80px;
+    height: 80px;
+    background-color: #AFFFB3; }
+.circle-4 { 
+    width: 90px;
+    height: 90px;
+    background-color: #DDFFDF; }
+.circle-5 { 
+    width: 100px;
+    height: 100px;
+    background-color: #F4FFF5; 
 }
 
  /* Style pour le sous-titre de la section "Service Style 01" */
@@ -124,4 +171,37 @@ body {
 .experience-text p {
     font-size: 1rem;
     color: #6c757d; /* Texte gris pour la description */
+}
+
+
+.footer {
+    background-color: #0a3b59;
+    color: white;
+    padding: 40px 0;
+}
+.footer .footer-logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #4CAF50;
+}
+.footer a {
+    color: white;
+    text-decoration: none;
+}
+.footer a:hover {
+    text-decoration: underline;
+}
+.footer .social-icons a {
+    font-size: 24px;
+    margin-right: 15px;
+}
+.footer .divider {
+    height: 1px;
+    background-color: #ccc;
+    margin: 20px 0;
+}
+.footer-bottom {
+    background-color: #4CAF50;
+    padding: 10px 0;
+ 
 }
