--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,43 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.navbar {
+    background-color: #0a3b59; /* Bleu foncé */
+    
+}
+.navbar-brand {
+    font-weight: bold;
+}
+.navbar-brand span {
+    color: #5ed75e;
+}
+.navbar-brand span #white{
+    color: white;
+}
+.navbar-nav .nav-link {
+    color: white;
+    margin-right: 20px;
+}
+.navbar-nav .nav-link.active, .navbar-nav .nav-link:hover {
+    color: #5ed75e; /* Vert */
+}
+.btn-quote {
+    border: 1px solid white;
+    color: white;
+}
+.btn-quote:hover {
+    background-color: white;
+    color: #0a3b59;
+}
+.input-group-text {
+    background-color: #5ed75e;
+    color: white;
+    border: none;
+}
+.search-input {
+    border: none;
+}
+
 /* Hero Section */
 .hero {
     position: relative;
@@ -187,7 +224,7 @@ h2{
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 align-items: center;
-margin-left: 10em;
+margin-left: 20em;
 }
 
 .projets-box {
@@ -281,4 +318,36 @@ color: var(--second-bg-color);
 margin-left: .5rem;
 }
 
+
+.footer {
+    background-color: #0a3b59;
+    color: white;
+    padding: 40px 0;
+}
+.footer .footer-logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #4CAF50;
+}
+.footer a {
+    color: white;
+    text-decoration: none;
+}
+.footer a:hover {
+    text-decoration: underline;
+}
+.footer .social-icons a {
+    font-size: 24px;
+    margin-right: 15px;
+}
+.footer .divider {
+    height: 1px;
+    background-color: #ccc;
+    margin: 20px 0;
+}
+.footer-bottom {
+    background-color: #4CAF50;
+    padding: 10px 0;
+ 
+}
 
