--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
 .footer {
     background-color: #0a3b59;
     color: white;
-    padding: 40px 0;
+    padding: 40px 0 0 0;
 }
 .footer .footer-logo {
     font-size: 24px;
@@ -27,5 +27,8 @@
 }
 .footer-bottom {
     background-color: #4CAF50;
-    padding: 10px 10px;
+    padding: 20px 10px;
+}
+.row{
+    padding: 20px 0;
 }
