--- a/css/services.css
+++ b/css/services.css
@@ -177,7 +177,7 @@ body {
 .footer {
     background-color: #0a3b59;
     color: white;
-    padding: 40px 0;
+    padding: 40px 0 0 0;
 }
 .footer .footer-logo {
     font-size: 24px;
@@ -203,4 +203,7 @@ body {
 .footer-bottom {
     background-color: #4CAF50;
     padding: 10px 10px;
+}
+.row{
+    padding: 20px 0;
 }
