--- a/CSS/about.css
+++ b/CSS/about.css
@@ -43,7 +43,7 @@ body {
 .hero{
     width: 100%;
     height: 60vh;
-    background-image: url('../assets/images/solar-panels-wind-turbines-green-energy-concept\ 1.jpg');
+    background-image: url('../assets/images/newsolar-panels-wind-turbines-green-energy-concept\ 2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -171,7 +171,7 @@ body {
     /* background: linear-gradient(90deg,#5C6898,#5589A4,#398FA3,#50904A,#4B9342);
     background-size: cover;
     color: white; */
-    background-image: url("../assets/images/Group\ 21.jpg");
+    background-image: url("../assets/images/Group\ 45.jpg");
     background-repeat: no-repeat;
     /* border-radius: 10px; */
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
@@ -220,16 +220,25 @@ form .btn {
 .name-overlay h6 {
     font-weight: bold;
 }
+.container h1{
+    margin-left: 100px;
+    margin-left: 100px;
+}
 
 /* pied de page */
 
 
 .footer {
-    background-color: #0a3b59;
-    color: white;
-    padding: 40px 0;
-    margin-top: 80px;
-}
+        background-color: #0a3b59;
+        color: white;
+        padding: 40px 0 0 0;
+        margin-top: 80px;
+    }
+
+/* .row{
+      padding: 20px 0;
+} */
+
 .footer .footer-logo {
     font-size: 24px;
     font-weight: bold;
